--- a/workspace/language/movimento.xml
+++ b/workspace/language/movimento.xml
@@ -2,25 +2,36 @@
 <!DOCTYPE log SYSTEM "logger.dtd">
 <log>
 <record>
-  <date>2021-10-05T17:54:03</date>
-  <millis>1633449243592</millis>
+  <date>2021-10-05T18:04:48</date>
+  <millis>1633449888144</millis>
   <sequence>0</sequence>
   <logger>logMovimento</logger>
   <level>INFO</level>
   <class>it.capgemini.academy.giorno6.eserciziocarta.Carta</class>
   <method>logging</method>
   <thread>1</thread>
-  <message>Movimento [tipo=PAGAMENTO, importo=234.0, data=Tue Oct 05 17:54:03 CEST 2021]</message>
+  <message>Movimento [tipo=RICARICA, importo=300.0, data=Tue Oct 05 18:04:48 CEST 2021]</message>
 </record>
 <record>
-  <date>2021-10-05T17:54:03</date>
-  <millis>1633449243603</millis>
+  <date>2021-10-05T18:04:50</date>
+  <millis>1633449890720</millis>
   <sequence>1</sequence>
   <logger>logMovimento</logger>
   <level>INFO</level>
   <class>it.capgemini.academy.giorno6.eserciziocarta.Carta</class>
   <method>logging</method>
   <thread>1</thread>
-  <message>Movimento [tipo=PRELIEVO, importo=234.0, data=Tue Oct 05 17:54:03 CEST 2021]</message>
+  <message>Movimento [tipo=PAGAMENTO, importo=10.0, data=Tue Oct 05 18:04:50 CEST 2021]</message>
+</record>
+<record>
+  <date>2021-10-05T18:04:53</date>
+  <millis>1633449893712</millis>
+  <sequence>2</sequence>
+  <logger>logMovimento</logger>
+  <level>INFO</level>
+  <class>it.capgemini.academy.giorno6.eserciziocarta.Carta</class>
+  <method>logging</method>
+  <thread>1</thread>
+  <message>Movimento [tipo=PRELIEVO, importo=2.0, data=Tue Oct 05 18:04:53 CEST 2021]</message>
 </record>
 </log>
